# SeaDesktop

./: CMakeLists.txt  COMMERCIAL-LICENSE.MD  COPYRIGHT.txt  README.md  Release_Notes.md
apps/Backend_Seastar/: CMakeLists.txt
apps/Backend_Seastar/src/: main.cpp
apps/Backend_Seastar/src/http/handlers/access_control/: resource_authorization_helper.cpp  resource_authorization_helper.h
apps/Backend_Seastar/src/http/handlers/auth_handlers/: login_handler.cpp  login_handler.h  me_handler.cpp  me_handler.h  protected_handler.cpp  protected_handler.h  register_handler.cpp  register_handler.h
apps/Backend_Seastar/src/http/handlers/crud_handlers/: create_handler.cpp  create_handler.h  delete_handler.cpp  delete_handler.h  get_by_id_handler.cpp  get_by_id_handler.h  list_handler.cpp  list_handler.h  update_handler.cpp  update_handler.h
apps/Backend_Seastar/src/http/middlewares/: authorization_middleware.cpp  authorization_middleware.h  cors_middleware.cpp  cors_middleware.h  http_limits_middleware.cpp  http_limits_middleware.h  rate_limit_middleware.cpp  rate_limit_middleware.h  rate_limit_store.cpp  rate_limit_store.h  route_authorization_resolver.cpp  route_authorization_resolver.h  security_headers_middleware.cpp  security_headers_middleware.h  token_bucket.cpp  token_bucket.h
apps/Backend_Seastar/src/http/routing/: route_registration.cpp  route_registration.h
apps/Backend_Seastar/src/http/swagger/: swagger_assets.cpp  swagger_assets.h
apps/Backend_Seastar/src/http/utils/: http_utils.cpp  http_utils.h  nonce_generator.cpp  nonce_generator.h
apps/SeaUI/: CMakeLists.txt  entitylistmodel.cpp  entitylistmodel.h  fieldlistmodel.cpp  fieldlistmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectlistmodel.cpp  projectlistmodel.h  routelistmodel.cpp  routelistmodel.h  servicelistmodel.cpp  servicelistmodel.h  servicestatuscheck.cpp  servicestatuscheck.h
configs/: SeaDesktopDemo.yaml  SeaDesktopDemo1.yaml
libs/application/: CMakeLists.txt  application.cpp  application.h  authservice.cpp  authservice.h  entity_parser.h  import_yaml_schema_usecase.cpp  import_yaml_schema_usecase.h  load_project_use_case.h  openapigenerator.cpp  openapigenerator.h  route_generator.cpp  route_generator.h  start_service_usecase.cpp  start_service_usecase.h  validate_schema_usecase.cpp  validate_schema_usecase.h
libs/domain/: CMakeLists.txt  database_config.h  domain.h  entity.h  field.h  field_type.h  project.h  relation.h  schema.h  schema_validator.cpp  schema_validator.h  service.h
libs/domain/access_control/: access_control_config.cpp  access_control_config.h  access_control_spec.cpp  access_control_spec.h  crud_operation.cpp  crud_operation.h  entity_access_control.cpp  entity_access_control.h  evaluation_options.cpp  evaluation_options.h  evaluation_result.cpp  evaluation_result.h  operator_evaluator.cpp  operator_evaluator.h  policy_compiler.cpp  policy_compiler.h  policy_condition.cpp  policy_condition.h  policy_condition_type.cpp  policy_condition_type.h  policy_context.h  policy_engine.cpp  policy_engine.h  policy_operator.cpp  policy_operator.h  policy_predicate.h  policy_resource.h  policy_subject.h  policy_value_ref.h  policy_value_source.cpp  policy_value_source.h  value_resolver.cpp  value_resolver.h
libs/domain/access_control/operators/: contains_strategy.cpp  contains_strategy.h  ends_with_strategy.cpp  ends_with_strategy.h  equals_strategy.cpp  equals_strategy.h  exists_strategy.cpp  exists_strategy.h  greater_than_or_equal_strategy.cpp  greater_than_or_equal_strategy.h  greater_than_strategy.cpp  greater_than_strategy.h  in_strategy.cpp  in_strategy.h  intersects_strategy.cpp  intersects_strategy.h  less_than_or_equal_strategy.cpp  less_than_or_equal_strategy.h  less_than_strategy.cpp  less_than_strategy.h  not_equals_strategy.cpp  not_equals_strategy.h  not_exists_strategy.cpp  not_exists_strategy.h  not_in_strategy.cpp  not_in_strategy.h  numeric_helper.cpp  numeric_helper.h  operator_registry.cpp  operator_registry.h  operator_strategy.h  regex_match_strategy.cpp  regex_match_strategy.h  starts_with_strategy.cpp  starts_with_strategy.h
libs/domain/database_mappings/: mysql_type_mapping.h  postgres_type_mapping.h
libs/domain/protocol/http_protocol/: http_method.h
libs/domain/security_scheme/: abac_mode.cpp  abac_mode.h  authentification_config.cpp  authentification_config.h  cors_config.cpp  cors_config.h  http_limit.cpp  http_limit.h  rate_limit_rule.cpp  rate_limit_rule.h  security_config.cpp  security_config.h  security_headers.cpp  security_headers.h
libs/infrastructure/: CMakeLists.txt
libs/infrastructure/persistence/: i_generic_repository.h  repository_factory.cpp  repository_factory.h  utilities.h
libs/infrastructure/persistence/memory/: in_memory_generic_repository.cpp  in_memory_generic_repository.h
libs/infrastructure/persistence/mongo/: mongo_connector.h  mongo_generic_repository.cpp  mongo_generic_repository.h
libs/infrastructure/persistence/mysql/: mysql_bootstrapper.cpp  mysql_bootstrapper.h  mysql_connector.h  mysql_generic_repository.cpp  mysql_generic_repository.h  mysql_introspector.cpp  mysql_introspector.h  mysql_schema_generator.cpp  mysql_schema_generator.h  mysqlconnexionpool.cpp  mysqlconnexionpool.h  schema_differ.cpp  schema_differ.h  seed_orchestrator.cpp  seed_orchestrator.h
libs/infrastructure/persistence/postgres/: postgres_connector.h  postgres_generic_repository.cpp  postgres_generic_repository.h
libs/infrastructure/runtime/: dynamic_record.h  dynamic_value.h  generic_crud_engine.cpp  generic_crud_engine.h  generic_validator.cpp  generic_validator.h  i_project_repository.h  json_record_parser.cpp  json_record_parser.h  schema_runtime_registry.cpp  schema_runtime_registry.h
libs/infrastructure/security/: jwt_service.cpp  jwt_service.h  secret_store.cpp  secret_store.h
libs/infrastructure/thread_pool_execution/: i_blocking_executor.h  std_thread_pool_executor.h
libs/infrastructure/yaml/: yaml_project_repository.cpp  yaml_project_repository.h  yaml_schema_parser.cpp  yaml_schema_parser.h
(+20 files in other folders)
